openshift/api/deploy.yaml
---
# How the app will be deployed to the pod.
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: api
  namespace: default
  annotations:
    description: Defines how to deploy api
  labels:
    name: api
    part-of: coevent
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 3
  test: false
  selector:
    part-of: coevent
    component: api
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - api
        from:
          kind: ImageStreamTag
          name: api:latest
  template:
    metadata:
      name: api
      labels:
        part-of: coevent
        component: api
    spec:
      volumes:
        - name: file-storage
          persistentVolumeClaim:
            claimName: file-storage
        - name: av-storage
          persistentVolumeClaim:
            claimName: av-storage
      containers:
        - name: api
          image: ""
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: file-storage
              mountPath: /data
            - name: av-storage
              mountPath: /av
          resources:
            requests:
              cpu: 20m
              memory: 250Mi
            limits:
              cpu: 100m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
