openshift/api/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
  labels:
    name: api
    part-of: coevent
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: coevent.apps.silver.devops.gov.bc.ca
  path: /api
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: api
    weight: 100
